<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>
  <groupId>ch.ivyteam.ivy.project.portal</groupId>
  <artifactId>portalTest</artifactId>
  <version>8.0.0.0-SNAPSHOT</version>
  <packaging>iar</packaging>
  <properties>
  	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	<powermock.version>2.0.2</powermock.version>
	<build.plugin.version>7.4.0-SNAPSHOT</build.plugin.version>
  </properties>
  <dependencies>
    <dependency>
      <groupId>ch.ivyteam.ivy.project.portal</groupId>
      <artifactId>portalTemplate</artifactId>
      <version>8.0.0.0-SNAPSHOT</version>
      <type>iar</type>
    </dependency>
    <dependency>
      <!-- required: test framework used by the maven-surefire-plugin to run 
      	tests -->
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.8.2</version>
      <scope>test</scope>
	</dependency>
	<dependency>
      <groupId>org.powermock</groupId>
      <artifactId>powermock-module-junit4</artifactId>
      <version>${powermock.version}</version>
      <scope>test</scope>
	</dependency>
	<dependency>
      <groupId>org.powermock</groupId>
      <artifactId>powermock-api-mockito2</artifactId>
      <version>${powermock.version}</version>
      <scope>test</scope>
	</dependency>
	<!-- for GUI test -->
	<dependency>
      <groupId>ch.xpertline</groupId>
      <artifactId>base_gui_test</artifactId>
      <version>0.00.15.00-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>com.jayway.awaitility</groupId>
      <artifactId>awaitility</artifactId>
      <version>1.7.0</version>
    </dependency>
  </dependencies>
  <build>
  	<sourceDirectory>${basedir}/src/</sourceDirectory>
	<directory>${basedir}/target</directory>
	<outputDirectory>${basedir}/classes</outputDirectory>
  	<testSourceDirectory>${basedir}/src_test/</testSourceDirectory>
	<testOutputDirectory>${basedir}/classes/</testOutputDirectory>
    <plugins>
      <plugin>
        <groupId>com.axonivy.ivy.ci</groupId>
        <artifactId>project-build-plugin</artifactId>
        <version>${build.plugin.version}</version>
        <extensions>true</extensions>        
      </plugin>
      <!-- for GUI test -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.3</version>
        <configuration>
          <source>11</source>
          <target>11</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.0.2</version>
        <executions>
          <execution>
            <goals>
              <goal>test-jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
